2019-1/231/users/4239/executions/1651_2703.log
== TEST (2019-04-09 18:23:11) 
-- CODE:
idade= int(input("idade"))
if(idade >=18):
   mensagem= "eleitor"
else(idade<18):
	mensagem= "nao_eleitor"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else(idade<18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:23:54) 
-- CODE:
idade= int(input("idade:"))

if(idade >=18):
   mensagem= "eleitor"
else(idade<18):
	mensagem= "nao_eleitor"

	print(mensagem)
-- ERROR:
File "XXXX", line 5
    else(idade<18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:25:57) 
-- CODE:
idade= int(input("idade:"))

if(idade >= 18):
   mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:26:04) 
-- CODE:
idade= int(input("idade:"))

if(idade >= 18):
   mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:26:07) 
-- CODE:
idade= int(input("idade:"))

if(idade >= 18):
   mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

	print(mensagem)
-- EXECUTION TIME:
0.140833
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:26:16) 
-- CODE:
idade= int(input("idade:"))

if(idade >= 18):
   mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

	print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:26:28) 
-- CODE:
idade= int(input("idade:"))

if(idade >= 18):
   mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

	print(mensagem)
-- EXECUTION TIME:
0.144685
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:27:01) 
-- CODE:
idade= int(input("idade:"))

if(idade >= 18):
   mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:27:07) 
-- CODE:
idade= int(input("idade:"))

if(idade >= 18):
   mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

print(mensagem)
-- EXECUTION TIME:
0.133042
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
